--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,25 +38,25 @@
                                        <ul>
                                         <ngx-slick-carousel class="slider" #slickModal="slick-carousel" [config]="mega_menu_slider">
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service/service-details">UX/UI Design</a>
+                                                <a class="service-inner-menu" routerLink="/service/service-details">UX/UI Design</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service/shopify-web">shopify Web Development</a>
+                                                <a class="service-inner-menu" routerLink="/service/shopify-web">shopify Web Development</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service/strategy&cro">Strategy & CRO Insights</a>
+                                                <a class="service-inner-menu" routerLink="/service/strategy&cro">Strategy & CRO Insights</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service/internationalization">Internationalization</a>
+                                                <a class="service-inner-menu" routerLink="/service/internationalization">Internationalization</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service/data-migration">Data Migration</a>
+                                                <a class="service-inner-menu" routerLink="/service/data-migration">Data Migration</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service/headless">Headless & Composable Commerce</a>
+                                                <a class="service-inner-menu" routerLink="/service/headless">Headless & Composable Commerce</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service/shopify-app">Custom Shopify App Development</a>
+                                                <a class="service-inner-menu" routerLink="/service/shopify-app">Custom Shopify App Development</a>
                                             </li>
                                             </ngx-slick-carousel>
                                        </ul>
