--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="main-header-wrap flex">
             <div class="logo-wrap">
                 <a class="menu-item" routerLink="/">
-                <img src="../../assets/image/CD_LOGO.webp" alt="">
+                <img src="../../assets/image/CD_LOGO.webp" alt="Codesdesk">
                 </a>
             </div>
             <div id="toggle">
