--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -26,7 +26,7 @@
     font-family: var(--second-heading);
     font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 27px;
     max-width: 447px;
 }
@@ -120,21 +120,20 @@
         transform:scale(1,1);
     }
 }
-.loop_slider_wrap {
+/* .loop_slider_wrap {
     margin-top: 88px;
     width: 100%;
     background: #37C8AE;
     padding: 71px 0;
 }
 .loop_slider_wrap .loop_slider div {
-    /* margin-right: 174.3px; */
     margin: 0 87px;
 }
 .loop_slider_wrap .loop_slider div img {
     width: 100%;
     max-height: 60px;
     object-fit: cover;
-}
+} */
 .partnerships_section {
     width: 100%;
     padding: 91px 0 100px;
@@ -163,7 +162,7 @@
     font-family: var(--main-heading-font);
     font-size: 45px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 55px;
 }
 .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos {
@@ -193,7 +192,71 @@
     padding-right: 20px;
 }
 
-
+/* loop slider */ 
+.loop-slider-main-wraper {
+    margin: 80px 0 0px 0;
+    padding: 60px 0;
+}
+.marquee {
+    display: flex;
+    overflow: hidden;
+    user-select: none;
+    gap: 20px;
+    mask-image: linear-gradient(
+      var(--mask-direction, to right),
+      hsl(0 0% 0% / 0),
+      hsl(0 0% 0% / 1) 20%,
+      hsl(0 0% 0% / 1) 80%,
+      hsl(0 0% 0% / 0)
+    );
+}
+.marquee__group {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+    animation: scroll-x 60s linear infinite;
+}
+.marquee--reverse .marquee__group {
+    animation-direction: reverse;
+    animation-delay: -3s;
+}  
+@keyframes scroll-x {
+    from {
+      transform: translateX(var(--scroll-start));
+    }
+    to {
+      transform: translateX(var(--scroll-end));
+    }
+} 
+@keyframes scroll-y {
+    from {
+      transform: translateY(var(--scroll-start));
+    }
+    to {
+      transform: translateY(var(--scroll-end));
+    }
+}  
+  /* Element styles */
+.marquee .svg-wrap-group {
+    display: grid;
+    place-items: center;
+    width: 330px;
+    height: 180px;
+    background: #0C3730;
+    aspect-ratio: 16 / 9;
+    border-radius: 0.5rem;
+} 
+  /* Parent wrapper */
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: auto;
+    max-width: 100vw;
+}
+  
 @media only screen and (max-width:1280px) {
     .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos {
        column-gap: 80px;
@@ -325,13 +388,13 @@
     .slider_section_wrapper {
         padding: 0 20px;
     }
-    .loop_slider_wrap {
+    /* .loop_slider_wrap {
         margin-top: -64px;
         padding: 114px 0 50px;
     }
     .loop_slider_wrap .loop_slider div {
         margin-right: 71px;
-    }
+    } */
     .our_work_section .our_work_all_wrap .our_work_body_wrap .bnt-wrap .cdk-btn-green.mobile,
     .service_body_wrap .bnt-wrap .cdk-btn-green.mobile {
         display: flex;
@@ -399,4 +462,13 @@
         row-gap: 40px;
         column-gap: 0;
      }
+     /* loop slider */
+     .loop-slider-main-wraper {
+        margin: 40px 0 0px 0;
+        padding: 40px 0;
+    }
+    .marquee .svg-wrap-group {
+        width: 300px;
+        height: 150px;
+    }
 }
