--- a/src/styles.css
+++ b/src/styles.css
@@ -91,8 +91,20 @@
     --second-heading: "Rubik";
     --text-font: "Rubik";
     --btn-color: "#37C8AE";
-
+    --size: clamp(10rem, 1rem + 40vmin, 30rem);
+    --gap: calc(var(--size) / 14);
+    --duration: 60s;
+    --scroll-start: 0;
+    --scroll-end: calc(-100% - var(--gap));
 }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --color-text: papayawhip;
+      --color-bg: navy;
+      --color-bg-accent: #2626a0;
+    }
+  }
 body {
     background: linear-gradient(108deg, rgb(12, 55, 48) -100%, #000 99.21%);
     color: #fff;
@@ -136,20 +148,20 @@ body.service .dropdown-wrap {
 .main-heading {
     font-size: 64px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
     font-family: var(--main-heading-font);
 }
 .second-heading {
     font-size: 40px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
 }
 .primery-text {
     font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 27px;
 }
 .flex {
@@ -179,7 +191,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 20px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
 }
@@ -188,7 +200,7 @@ body.service .dropdown-wrap {
     font-family: var(--main-heading-font);
     font-size: 45px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
 }
 .policy-heading {
@@ -196,7 +208,7 @@ body.service .dropdown-wrap {
     font-family: var(--main-heading-font);
     font-size: 40px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 48px;
     text-transform: capitalize;
 }
@@ -205,7 +217,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 28px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 27px;
     text-transform: capitalize;
 }
@@ -214,7 +226,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 22px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 27px;
     text-transform: capitalize;
 }
@@ -223,7 +235,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 20px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 27px;
     text-transform: capitalize;
 }
@@ -232,7 +244,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 20px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
 }
@@ -241,7 +253,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 90px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 120px;
 }
 .space-between {
@@ -531,7 +543,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 20px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
     margin-bottom: 15px;
@@ -543,7 +555,7 @@ body.service .dropdown-wrap {
     font-family: var(--main-heading-font);
     font-size: 45px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
 }
 .blogs-section .our_work_all_wrap .service-head .service-titel h2 {
@@ -551,7 +563,7 @@ body.service .dropdown-wrap {
     font-family: var(--main-heading-font);
     font-size: 40px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
 }
 .service_section .service_all_wrap .service-head .service-text,
@@ -569,7 +581,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 27px;
 }
 .service_body_wrap .service-body {
@@ -604,7 +616,7 @@ body.service .dropdown-wrap {
     font-family: Rubik;
     font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 27px;
     max-width: 728px;
     width: 100%;
@@ -800,7 +812,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 17px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 27px;
     margin: 20px 0 15px;
 }
@@ -809,7 +821,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 27px;
     width: 100%;
     max-width: 402px;
@@ -875,7 +887,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 28px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 35px;
     margin-bottom: 38px;
     text-transform: uppercase;
@@ -885,7 +897,7 @@ body.service .dropdown-wrap {
     font-family: var(--second-heading);
     font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 27px;
 }
 .about-banner-section .container .about_cards_wrap .about-cards_wrap .box,
@@ -2045,16 +2057,6 @@ html {
 #container {
     padding: 0 30px;
 }
-/* #service-main.main-title-section:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(1, 12, 22, 0.92);
-    z-index: 0;
-} */
 #service-main.main-title-section .main-title-wrap {
     position: relative;
     padding: 0;
@@ -2073,43 +2075,35 @@ html {
     margin-top: 60px;
 }
 #service-two .container-two .all-items-wrapper .order-list {
-    padding: 40px 0 50px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    row-gap: 20px;
+    padding: 40px 0 30px 20px;
+    column-count: 2;
+    column-gap: 40px;
 }
 #service-two .container-two .all-items-wrapper .order-list .order-item {
     color: #FFF;
     font-family: Rubik;
-    font-size: 22px;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 27px;
-    width: 388px;
+    font-weight: 300;
+    line-height: 20px;
+    margin-bottom: 20px;
 }
 #service-two .container-two .all-items-wrapper .order-list .order-item::marker {
     color: #37C8AE;
 }
 #service-two .container-two .all-items-wrapper .unorder-list {
     padding: 34px 0 0 20px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 740px;
-    row-gap: 20px;
+    column-count: 2;
+    column-gap: 40px;
 }
 #service-two .container-two .all-items-wrapper .unorder-list .unorder-items {
-    width: 360px;
     color: #FFF;
     font-family: Rubik;
-    font-size: 22px;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 27px;
+    font-weight: 300;
+    line-height: 20px;
+    margin-bottom: 20px;
     list-style-image: url(../src/assets/image/servicre-inner/Layer.svg);
 }
 /* last */
@@ -2287,7 +2281,7 @@ html {
     }
     #service-two .container-two .all-items-wrapper .unorder-list,
     #service-two .container-two .all-items-wrapper .order-list {
-        row-gap: 15px;
+        column-count: 1;
     }
     #service-three.service-bacground-section {
         height: 500px;
