--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -221,8 +221,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_11.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_1-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_11.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_1-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">luxandnyx</h4>
@@ -237,8 +237,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_2.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_2-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_2.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_2-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Paris Select</h4>
@@ -255,8 +255,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_3.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_3-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_3.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_3-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Egyptianqueenbeauty</h4>
@@ -270,8 +270,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_5.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_5-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_5.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_5-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Mersi Distribution</h4>
