--- a/src/app/our-work/our-work.component.html
+++ b/src/app/our-work/our-work.component.html
@@ -22,8 +22,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_11.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_1-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_11.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_1-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">luxandnyx</h4>
@@ -38,8 +38,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_2.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_2-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_2.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_2-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Paris Select</h4>
@@ -56,8 +56,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_3.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_3-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_3.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_3-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Egyptian queen beauty</h4>
@@ -72,8 +72,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_9.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_9-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_9.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_9-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Fameschocolates</h4>
@@ -92,8 +92,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_5.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_5-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_5.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_5-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Mersi Distribution</h4>
@@ -109,8 +109,8 @@
                             <p class="card-txt">Design & Build in Wordpress</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_6.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_6-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_6.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_6-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Men's health clinic</h4>
@@ -127,8 +127,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_7.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_7-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_7.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_7-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Protech Monte-Carlo</h4>
@@ -143,8 +143,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_8.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_8-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_8.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_8-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Gripps</h4>
@@ -163,8 +163,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_12.png" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_12-mobile.png" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_12.png" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_12-mobile.png" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Tanaor jewelry</h4>
@@ -179,8 +179,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_10.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_10-mobile.webp" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_10.webp" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_10-mobile.webp" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Anansipalaceforkids</h4>
@@ -196,8 +196,8 @@
                                 <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_13.png" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_13-mobile.png" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_13.png" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_13-mobile.png" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Sneakercentral</h4>
@@ -211,8 +211,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_14.png" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_14-mobile.png" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_14.png" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_14-mobile.png" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Shopbahari</h4>
@@ -228,8 +228,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_15.png" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_15-mobile.png" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_15.png" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_15-mobile.png" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Robertolab</h4>
@@ -243,8 +243,8 @@
                                 <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_16.png" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_16-mobile.png" alt="">
+                        <img class="" src="../../assets/image/portfolio/our_work_16.png" alt="">
+                        <!-- <img class="mobile" src="../../assets/image/portfolio/our_work_16-mobile.png" alt=""> -->
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Runwayscrubs</h4>
