kavala portfolio inner page

--- a/src/app/our-work/our-work.component.html
+++ b/src/app/our-work/our-work.component.html
@@ -251,6 +251,38 @@
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
                 </div>
+                <div class="our_work-images_wrap flex wrap">
+                    <a routerLink="/our-work/northstarcoffee" class="work-image_two work-image_all">
+                        <div class="card-h-txt">
+                            <h3 class="logo_card">North Star Coffee</h3>
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Northstarcoffeeco</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_17.png" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_17-mobile.png" alt="">
+                    </a>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">Northstarcoffeeco</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div>
+                    <a routerLink="/our-work/kavala-collective" class="work-image_four work-image_all">
+                        <div class="card-h-txt">
+                            <h3 class="logo_card">Robertolab</h3>
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Robertolab</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_15.png" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_15-mobile.png" alt="">
+                    </a>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">Robertolab</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div>
+                </div>
             </div>
             <div class="bnt-wrap">
                 <a class="cdk-btn-green more-work">load more</a>
