--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="blog-title-text">
                         <h3>March 30, 2023</h3>
-                        <p>Unlock Global Growth: Harness the Power of Language Translation with LangShop App</p>
+                        <p>5 Ways LangShop App Can Help You Unlock Global Growth</p>
                     </div>
                 </a>
                 <a routerLink="/resource/build-a-winning-shopify-store" id="E-commerce" class="blog_card_wrap">
@@ -170,7 +170,7 @@
                     </div>
                     <div class="blog-title-text">
                         <h3>March 11, 2023</h3>
-                        <p>How to Build a Winning Shopify Store Design</p>
+                        <p>Secrets to Building a Winning Shopify Store Design</p>
                     </div>
                 </a>
                 <a routerLink="/resource/benefits-of-integrating-email-marketing" id="Shopify" class="blog_card_wrap">
@@ -179,7 +179,7 @@
                     </div>
                     <div class="blog-title-text">
                         <h3>February 27, 2023</h3>
-                        <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
+                        <p>Boosting Sales: The Role of Email Marketing in Shopify Stores</p>
                     </div>
                 </a>
                 <a routerLink="/resource/apps-for-streamlining-your-business" id="shopify-apps" class="blog_card_wrap">
@@ -188,7 +188,7 @@
                     </div>
                     <div class="blog-title-text">
                         <h3>February 06, 2023</h3>
-                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
+                        <p>Simplify and Streamline: 5 Must-Have Shopify Apps for Business Operations.</p>
                     </div>
                 </a>
                 <a routerLink="/resource/use-instagram-to-drive-sales" id="E-commerce" class="blog_card_wrap">
@@ -197,7 +197,7 @@
                     </div>
                     <div class="blog-title-text">
                         <h3>January 21, 2023</h3>
-                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
+                        <p>Boost Your Shopify Store Sales with Instagram.</p>
                     </div>
                 </a>
                 <a routerLink="/resource/tips-for-optimizing-your-shopify-store" id="seo" class="blog_card_wrap">
@@ -206,7 +206,7 @@
                     </div>
                     <div class="blog-title-text">
                         <h3>January 02, 2023</h3>
-                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
+                        <p>The SEO Game-Changer: 5 Tips for Optimising Your Shopify Store</p>
                     </div>
                 </a> 
             </div>
