--- a/src/app/taleflick/taleflick.component.html
+++ b/src/app/taleflick/taleflick.component.html
@@ -1,5 +1,5 @@
 <section id="main-banner" class="space-top-m">
-    <img src="../../assets/image/portfolio/kavala/main-banner.webp" alt="" width="100%" class="main-banner-image">
+    <img src="../../assets/image/portfolio/tele-flick/main-banner.webp" alt="" width="100%" class="main-banner-image">
     <a class="arrow-down-scroll" (click)="scroll(target)">
         <div class="mouse_scroll">
             <div class="mouse">
@@ -17,7 +17,7 @@
     <div class="service_all_wrap container-second">
         <div class="title-wrap">
             <h1 class="portfolio-title-green">
-                Kavalacollective
+                Taleflick
             </h1>
         </div>
         <div class="service-head flex space-between">
@@ -26,10 +26,10 @@
             </div>
             <div class="service-text">
                 <p class="primery-text">
-                    This journey inspired me to create Runwayscrubs, a brand that stands for something bigger than just a handbag. Our handbags are not just accessories; they are symbols of empowerment, designed to inspire confidence and ambition in women who are carving out their own paths in life.And now, with the addition of our unisex line, we proudly support everyone who believes in the movement of gender equity.
+                    This journey inspired me to create taleflick, a brand that stands for something bigger than just a handbag. Our handbags are not just accessories; they are symbols of empowerment, designed to inspire confidence and ambition in women who are carving out their own paths in life.And now, with the addition of our unisex line, we proudly support everyone who believes in the movement of gender equity.
                 </p>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" target="_blank" href="https://kavalacollective.com/">view live site</a>
+                    <a class="cdk-btn-green" target="_blank" href="https://taleflick.myshopify.com/">view live site</a>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
 <section id="desktop-image">
     <div class="container" id="container">
         <div class="desktop-image-wrapper">
-            <img src="../../assets/image/portfolio/kavala/second-banner.webp" alt="" width="100%" class="desktop-img">
+            <img src="../../assets/image/portfolio/tele-flick/second-banner.webp" alt="" width="100%" class="desktop-img">
         </div>
     </div>
 </section>
@@ -77,16 +77,16 @@
     <div class="container" id="container">
         <div class="all-mobile-screen-wrap flex space-between">
             <div class="mobile-screen">
-                <img src="../../assets/image/portfolio/kavala/screen1.webp" alt="" width="100%" class="screen-img desktop">
-                <img src="../../assets/image/portfolio/kavala/screen1.webp" alt="" width="100%" class="screen-img mobile">
+                <img src="../../assets/image/portfolio/tele-flick/screen1.webp" alt="" width="100%" class="screen-img desktop">
+                <img src="../../assets/image/portfolio/tele-flick/screen1.webp" alt="" width="100%" class="screen-img mobile">
             </div>
             <div class="mobile-screen">
-                <img src="../../assets/image/portfolio/kavala/screen2.webp" alt="" width="100%" class="screen-img desktop">
-                <img src="../../assets/image/portfolio/kavala/screen2.webp" alt="" width="100%" class="screen-img mobile">
+                <img src="../../assets/image/portfolio/tele-flick/screen2.webp" alt="" width="100%" class="screen-img desktop">
+                <img src="../../assets/image/portfolio/tele-flick/screen2.webp" alt="" width="100%" class="screen-img mobile">
             </div>
             <div class="mobile-screen">
-                <img src="../../assets/image/portfolio/kavala/screen3.webp" alt="" width="100%" class="screen-img desktop">
-                <img src="../../assets/image/portfolio/kavala/screen3.webp" alt="" width="100%" class="screen-img mobile">
+                <img src="../../assets/image/portfolio/tele-flick/screen3.webp" alt="" width="100%" class="screen-img desktop">
+                <img src="../../assets/image/portfolio/tele-flick/screen3.webp" alt="" width="100%" class="screen-img mobile">
             </div>
         </div>
     </div>
@@ -140,7 +140,7 @@
     </div>
     <div class="container" id="container">
         <div class="desktop-image-wrapper">
-            <img src="../../assets/image/portfolio/kavala/desktop-two-img.webp" alt="" width="100%" class="desktop-img">
+            <img src="../../assets/image/portfolio/tele-flick/desktop-two-img.webp" alt="" width="100%" class="desktop-img">
         </div>
     </div>
 </section>
@@ -161,14 +161,14 @@
         <div class="all-challenge-img-wrapper">
             <div class="challenge-top-wrap flex">
                 <div class="challenge-img">
-                    <img src="../../assets/image/portfolio/kavala/challenge.webp" alt="" width="100%" class="challenge-image">
+                    <img src="../../assets/image/portfolio/tele-flick/challenge.webp" alt="" width="100%" class="challenge-image">
                 </div>
                 <div class="challenge-img">
-                    <img src="../../assets/image/portfolio/kavala/challenge2.webp" alt="" width="100%" class="challenge-image">
+                    <img src="../../assets/image/portfolio/tele-flick/challenge2.webp" alt="" width="100%" class="challenge-image">
                 </div>
             </div>
             <div class="challenge-bottom-wrap">
-                <img src="../../assets/image/portfolio/kavala/challenge3.webp" width="100%" alt="" class="challenge-image">
+                <img src="../../assets/image/portfolio/tele-flick/challenge3.webp" width="100%" alt="" class="challenge-image">
             </div>
         </div>
     </div>
