--- a/src/app/kavalacollective/kavalacollective.component.html
+++ b/src/app/kavalacollective/kavalacollective.component.html
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                     </a>  
-                    <!-- <a routerLink="/our-work/egyptian" class="case-items" ngxSlickItem>
+                    <a routerLink="/our-work/egyptian" class="case-items" ngxSlickItem>
                         <div class="card-h-txt desktop">
                             <img class="logo_card egyptian" src="../../assets/image/attachment-egyptian.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -308,7 +308,7 @@
                                  <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                    </a> -->
+                    </a>
                     <a routerLink="/our-work" class="case-items" ngxSlickItem>
                         <div class="card-h-txt desktop">
                             <img class="logo_card mresi" src="../../assets/image/attachment-mersi.png" width="100%" alt="">
@@ -321,6 +321,118 @@
                         <div class="card-h-txt mobile">
                             <div class="bottom_card">
                                 <h4 class="card-heading">Mersi Distribution</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/tanaorjewelry" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card mresi" src="../../assets/image/tanaor-logo.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Tanaor jewelry</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-12.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Tanaor jewelry</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/sneaker-central" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card sneaker" src="../../assets/image/logo-sneakercentral.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Sneakercentral</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-13.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Sneakercentral</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/shop-bahari" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card mresi" src="../../assets/image/bahari-logo.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Shopbahari</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-14.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Shopbahari</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/robertolab" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <h3 class="logo_card">Robertolab</h3>
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Robertolab</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-15.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Robertolab</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/runwayscrubs" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card sneaker" src="../../assets/image/RS-site-logo.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Runwayscrubs</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-16.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Runwayscrubs</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/northstarcoffee" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <h3 class="logo_card">North Star Coffee</h3>
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Northstarcoffeeco</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-17.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Northstarcoffeeco</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/tele-flick" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card mresi" src="../../assets/image/tele-Logo.webp" width="100%" alt="">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Taleflick</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-19.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Taleflick</h4>
                                 <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
