--- a/src/app/our-work/our-work.component.html
+++ b/src/app/our-work/our-work.component.html
@@ -258,6 +258,22 @@
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
                 </div>
+                <div class="our_work-images_wrap flex wrap">
+                    <a routerLink="/our-work/tele-flick" class="work-image_four work-image_all">
+                        <div class="card-h-txt">
+                            <img class="logo_card mresi" src="../../assets/image/tele-Logo.webp" width="100%" alt="">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Taleflick</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/our_work_19.webp" alt="">
+                    </a>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">Taleflick</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div>
+                </div>
             </div>
             <div class="bnt-wrap">
                 <a class="cdk-btn-green more-work">load more</a>
