--- a/src/app/robertolab/robertolab.component.html
+++ b/src/app/robertolab/robertolab.component.html
@@ -325,6 +325,118 @@
                             </div>
                         </div>
                     </a>
+                    <a routerLink="/our-work/tanaorjewelry" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card mresi" src="../../assets/image/tanaor-logo.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Tanaor jewelry</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-12.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Tanaor jewelry</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/sneaker-central" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card sneaker" src="../../assets/image/logo-sneakercentral.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Sneakercentral</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-13.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Sneakercentral</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/shop-bahari" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card mresi" src="../../assets/image/bahari-logo.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Shopbahari</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-14.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Shopbahari</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/runwayscrubs" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card sneaker" src="../../assets/image/RS-site-logo.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Runwayscrubs</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-16.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Runwayscrubs</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/northstarcoffee" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <h3 class="logo_card">North Star Coffee</h3>
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Northstarcoffeeco</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-17.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Northstarcoffeeco</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/kavala-collective" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card mresi" src="../../assets/image/kavala-400.png" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">kavalacollective</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-18.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">kavalacollective</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="/our-work/tele-flick" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
+                            <img class="logo_card mresi" src="../../assets/image/tele-Logo.webp" width="100%" alt="">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Taleflick</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img src="../../assets/image/portfolio/case/case-19.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Taleflick</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                    </a>
                 </ngx-slick-carousel>
             </div>
         </div>
